# stm32-test

./: .gitignore  CMakeLists.txt  README.md
proteus/: stm32-test.pdsprj
src/: hal_isr.c  hal_isr.h  hal_msp.c  main.c  stm32f4xx_hal_conf.h
src/core/: syscalls.c  sysmem.c
